force-app/ifsr/main/schema/objects/Opportunity/fields/Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_Date__c</fullName>
    <description>A date stamp (set by the Opportunity: Set Application Submitted Date workflow rule) to record when an Opportunity stage is changed to Applicant.</description>
    <inlineHelpText>The date when the Opportunity was changed from an inquiry to an applicant, based on Stage.</inlineHelpText>
    <label>Application Submitted Date</label>
    <type>Date</type>
</CustomField>