force-app/ifsr/main/schema/objects/Opportunity/fields/Career__c.field-meta.xml
<CustomField>
    <fullName>Career__c</fullName>
    <description>Returns the Career from the Academic Interest if there is one, otherwise it returns the Career from the Recruitment Interest if there is one. Used in building the Opportunity Key for the Interaction Processor to determine whether to create a new Opportunity or update an existing Opportunity.</description>
    <formula>/*If an Academic Interest exists for the Opportunity, retrieve the associated Career*/ 
IF(NOT(ISBLANK(Academic_Interest__c)),TEXT(Academic_Interest__r.Career__c), 

/*IF not, retrieve the associated Career from the Recruitment Interest on the Opportunity*/ 
TEXT(Recruitment_Interest__r.Career__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Career</label>
    <type>Text</type>
</CustomField>