force-app/ifsr/main/schema/objects/Opportunity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Returns the Department from the Academic Interest if there is one, otherwise it returns the Department from the Recruitment Interest if there is one.</description>
    <formula>/*If an Academic Interest exists for the Opportunity, retrieve the associated Department from the Academic Interest*/ 
IF(NOT(ISBLANK(Academic_Interest__c)),(  Academic_Interest__r.Department__r.Name  ), 

/*If not, retrieve the associated Department from the Recruitment Interset on the Opportunity*/ 
(  Recruitment_Interest__r.Department__r.Name  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>