force-app/ifsr/main/schema/objects/Opportunity/fields/Opportunity_Key__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Key__c</fullName>
    <description>A unique external ID text field which determines whether an Interaction will create a new Opportunity or edit an existing Opportunity. Built using the Contact’s 18-digit ID, Career, Term’s 158-digit ID, and Recruitment/Academic Interest’s 18-digit ID (if applicable) to ensure uniqueness and support of both a centralized and decentralized recruitment process. Set by the Interactions Processor.</description>
    <externalId>true</externalId>
    <label>Opportunity Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>